<resources>
    <string name="app_name">PopInteraction</string>
    <string name="depixelimage">Depixelimage</string>
    <string name="guess_voice">Guess the voice</string>
    <string name="emoji_story">Emoji story</string>
    <string name="Loading">...</string>
    <string name="popint">Popint</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="rules_popup_title">Rules of the game</string>
    <string name="rules_depixelimage">In DepixelImage, players are challenged to guess an image that gradually depixelates. The main goal is to recognize the image in the process of restoration and provide an accurate response. Over time, the image becomes clearer, allowing players to observe carefully and use their knowledge to identify the subject or scene depicted.\n\nTo play successfully, participants need to be quick in their observation and clever in their deductions. The key to success lies in the ability to recognize the depixelated image before it is completely restored. In other words, it\'s a challenge that tests players\' visual acuity and memory.</string>
    <string name="rules_guess_voice">In the game Guess the Voice, the players objective is to succeed in guessing the origin of the audio extract within a given time. The audio extract can come from different sources: film, show, song, animal cries or any other audio media.To do this, the user has the audio extract and the theme to which the extract relates, he must then note the solution in the form field and validate.</string>
    <string name="rules_emoji_story">In EmojiStory, player are challenged to guess subject, with like clue 3 emoji display after each error and one clue and the theme. The score is calculate in function of the numbers of this errors. </string>
    <string name="validate">Validate</string>
    <string name="enter_text">Enter your answer</string>
    <string name="score">Score</string>
    <string name="theme">Theme</string>
    <string name="indice">Indice</string>
    <string name="game_over">Game Over</string>
    <string name="number_game">Number of game</string>
    <string name="submit">Submit</string>
    <string name="stop">Stop</string>
    <string name="go">Go</string>
    <string name="next">Next</string>
    <string name="parameter">Parameter</string>
    <string name="upload">Upload</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="emoji_1">Emoji 1</string>
    <string name="emoji_2">Emoji 2</string>
    <string name="emoji_3">Emoji 3</string>
    <string name="ok">OK</string>
    <string name="file_name">File name</string>
    <string name="clue">Clue</string>
    <string name="answers">Answers</string>
    <string name="cancel">Cancel</string>
    <string name="congratulation">Congratulation</string>
    <string name="next_party">Next party</string>
    <string name="no_sound_file">Sound File Non-existent</string>
    <string name="no_sound_file_message">The sound file you are trying to play does not exist.</string>
    <string name="close">Close</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_message">The application does not have permission to access the sound file</string>
    <string name="timer">Timer :</string>
    <string name="time_elapsed">Time elsapsed</string>
</resources>