<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleStyle"
        android:text="@string/popint"
        app:layout_constraintBottom_toTopOf="@+id/depixelimageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <ImageView
        android:id="@+id/parameter"
        android:layout_width="52dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_manage"
        android:onClick="navigateToParameter"/>

    <ToggleButton
        android:id="@+id/guessVoiceButton"
        style="@style/CustomButtonStyle"
        android:layout_width="298dp"
        android:layout_height="133dp"
        android:layout_marginBottom="24dp"
        android:onClick="navigateToGuessVoice"
        android:text="@string/guess_voice"
        android:textColor="@color/white"
        android:textOff="@string/guess_voice"
        android:textOn="@string/Loading"
        app:layout_constraintBottom_toTopOf="@+id/depixelimageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/depixelimageButton"
        style="@style/CustomButtonStyle"
        android:layout_width="298dp"
        android:layout_height="133dp"
        android:layout_marginBottom="24dp"
        android:text="@string/depixelimage"
        android:textColor="@color/white"
        android:textOff="@string/depixelimage"
        android:textOn="@string/Loading"
        app:layout_constraintBottom_toTopOf="@+id/emojieStoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="navigateToDepixelImage"/>

    <ToggleButton
        android:id="@+id/emojieStoryButton"
        style="@style/CustomButtonStyle"
        android:layout_width="298dp"
        android:layout_height="133dp"
        android:layout_marginBottom="228dp"
        android:text="@string/emoji_story"
        android:textColor="@color/white"
        android:textOff="@string/emoji_story"
        android:textOn="@string/Loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="navigateToEmojiStory"/>

</androidx.constraintlayout.widget.ConstraintLayout>