<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".parameter.ParameterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter"
        style="@style/TitleStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        android:onClick="navigateToMenu"/>

    <ToggleButton
        android:id="@+id/playButton"
        style="@style/CustomButtonStyle"
        android:layout_width="139dp"
        android:layout_height="95dp"
        android:layout_marginBottom="24dp"
        android:onClick="navigateToCategorie"
        android:text="@string/category"
        android:textOff="@string/category"
        android:textOn="@string/Loading"
        app:layout_constraintBottom_toTopOf="@+id/rulesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/rulesButton"
        style="@style/CustomButtonStyle"
        android:layout_width="134dp"
        android:layout_height="97dp"
        android:layout_marginBottom="320dp"
        android:text="@string/upload"
        android:textOff="@string/upload"
        android:textOn="@string/Loading"
        android:onClick="navigateToUpload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>