<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".depixelimage.DepixelimageActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="navigateToDepixelMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/clue"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="388dp"
        android:layout_height="446dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/Loading" />
    *

    <TextView
        android:id="@+id/score"
        style="@style/TextStyle"
        android:layout_width="167dp"
        android:layout_height="39dp"
        android:text="Score: 0"
        app:layout_constraintBottom_toTopOf="@+id/Answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Answer"
        style="@style/AnswerInput"
        android:layout_width="215dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/answers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias="0.172"
        android:autofillHints="" />

    <ToggleButton
        android:id="@+id/submit"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textOff="@string/submit"
        android:textOn="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer"
        app:layout_constraintVertical_bias="0.164" />

    <ToggleButton
        android:id="@+id/stop"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textOff="@string/stop"
        android:textOn="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer"
        app:layout_constraintVertical_bias="0.16" />

    <ToggleButton
        android:id="@+id/next"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textOff="@string/next"
        android:textOn="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer"
        app:layout_constraintVertical_bias="0.43" />

</androidx.constraintlayout.widget.ConstraintLayout>