<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".parameter.UploadPopup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emoji1Text"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emoji_1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emoji1EditText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emoji2Text"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emoji_2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emoji2EditText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emoji3Text"
            style="@style/TextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emoji_3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emoji3EditText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/categoryNameText"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            style="@style/SpinnerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="#F57C00"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/imageText"
            style="@style/TextStyle"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Image"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/upload"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_upload" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/clueText"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/clueEditText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/answerText"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answers"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/answerEditText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/ok_button"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="uploadData"
            android:text="@string/ok"
            android:textOff="@string/ok"
            android:textOn="@string/ok" />

        <ToggleButton
            android:id="@+id/cancel_button"
            style="@style/CustomButtonStyle"
            android:onClick="navigateToUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textOff="@string/cancel"
            android:textOn="@string/cancel" />
    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>