<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".guessvoice.GuessVoiceActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        android:onClick="navigateToMenu"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_voice"
        style="@style/TitleStyle"
        app:layout_constraintBottom_toTopOf="@id/selectionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />


    <TextView
        android:id="@+id/theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        style="@style/TextStyle"
        android:text="Theme: "
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>


    <ImageView
        android:id="@+id/imagesolution"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        style="@style/TextStyle"
        android:text="@string/timer"
        app:layout_constraintTop_toBottomOf="@id/imagesolution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/score"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/imagesolution"
        android:gravity="center"
        android:text="Score: 0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="480dp" />

    <EditText
        android:id="@+id/selectionEditText"
        style="@style/AnswerInput"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:hint="@string/enter_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score" />

    <ToggleButton
        android:id="@+id/validateButton"
        style="@style/CustomButtonStyle"
        android:layout_width="134dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:onClick="validateWord"
        android:textOff="@string/validate"
        android:textOn="@string/validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
